# walmart-trip-type

./: .gitignore  main.py  pyproject.toml
baseline/: 0_baseline.ipynb  1_baseline_rf.ipynb  2_baseline_xgb.ipynb
eda/: eda1.ipynb  feature_eng.ipynb
modeling/: 0_baseline.ipynb  train1 copy.ipynb  train1.ipynb  train2.ipynb  train3.ipynb  train4.ipynb  train5.ipynb  train6.ipynb  train7.ipynb  train8.ipynb
modeling/features/: base_features.py  ohe_dept.py
modeling/neuralnet/: torch.py
modeling/preprocess/: pipe1.py  pipe2.py
modeling/runs/baseline/: events.out.tfevents.1751522059.Mac.attlocal.net.73039.2
modeling/runs/exp1/: events.out.tfevents.1751501518.Annas-Laptop.local.70352.0  events.out.tfevents.1751501572.Annas-Laptop.local.70352.1  events.out.tfevents.1751501671.Annas-Laptop.local.70352.2  events.out.tfevents.1751502214.Annas-Laptop.local.70352.3  events.out.tfevents.1751502718.Annas-Laptop.local.70352.4  events.out.tfevents.1751502874.Annas-Laptop.local.70352.5  events.out.tfevents.1751504325.Annas-Laptop.local.70352.6  events.out.tfevents.1751504341.Annas-Laptop.local.70352.7  events.out.tfevents.1751504698.Annas-Laptop.local.70352.8  events.out.tfevents.1751505012.Annas-Laptop.local.71684.0  events.out.tfevents.1751505203.Annas-Laptop.local.71684.1  (+1 more)
modeling/utils/: modeling.py  utils.py
runs/baseline/: events.out.tfevents.1751522350.Mac.attlocal.net.73039.3
runs/baseline_rf/: events.out.tfevents.1751560763.Mac.attlocal.net.77066.5
runs/baseline_xgb/: events.out.tfevents.1751560880.Mac.attlocal.net.84787.1
